Fix timeline active dot alignment

--- a/travel-react-site/src/styles.css
+++ b/travel-react-site/src/styles.css
@@ -201,7 +201,6 @@ button {
   background: #103f5b;
   color: #fff;
   box-shadow: inset 0 0 0 2px #0e78ff;
-  padding-left: 12px;
 }
 
 .timeline-dot {
@@ -219,6 +218,11 @@ button {
 .timeline-item.active .timeline-dot {
   background: #f4c85a;
   color: #103f5b;
+}
+
+.timeline-map-dot svg {
+  width: 25px;
+  height: 25px;
 }
 
 .timeline-item strong {
@@ -721,6 +725,11 @@ th {
     width: 34px;
     height: 34px;
     font-size: 1rem;
+  }
+
+  .timeline-map-dot svg {
+    width: 19px;
+    height: 19px;
   }
 
   .timeline-item strong {
